fix balance text overflow

--- a/ui/app/components/app/gas-customization/advanced-gas-inputs/index.scss
+++ b/ui/app/components/app/gas-customization/advanced-gas-inputs/index.scss
@@ -17,6 +17,8 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+      white-space: nowrap;
+      z-index: 1;
 
       @media screen and (max-width: 576px) {
         @include H8;
